--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     image: node:20.18.1
-    container_name: vinted_app
+    container_name: vinted-updated_app
     working_dir: /app
     volumes:
       - .:/app
@@ -14,22 +14,22 @@ services:
     depends_on:
       - mongodb
     networks:
-      - vinted-network
+      - vinted-updated-network
     restart: unless-stopped
 
   mongodb:
     image: mongo:latest
-    container_name: mongodb_vinted_public
+    container_name: mongodb_vinted-updated_public
     command: mongod --port 27018
     ports:
       - "127.0.0.1:27018:27018"
     volumes:
       - mongodb_data_container:/data/db
     networks:
-      - vinted-network
+      - vinted-updated-network
 
 volumes:
   mongodb_data_container:
 
 networks:
-  vinted-network:
+  vinted-updated-network:
