--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "socks-proxy-agent": "^8.0.3"
   },
   "type": "module",
-  "name": "vinted-no-delay",
+  "name": "vinted-updated-no-delay",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
